--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,29 @@
 server.port=9090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/results
-spring.datasource.username=assess
-spring.datasource.password=pqW2ke%%4WPq
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.proc.param_null_passing=true
-spring.sql.init.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql = true
+#spring.datasource.url=jdbc:mysql://localhost:3306/results
+#spring.datasource.username=assess
+#spring.datasource.password=pqW2ke%%4WPq
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#hibernate.proc.param_null_passing=true
+#spring.sql.init.continue-on-error=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.sql.init.mode=always
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql = true
 
 spring.main.allow-circular-references = true
 
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/studentresults
+spring.datasource.username= postgres
+spring.datasource.password= Everbest_1
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql = true
 
 app.jwtSecret==n2r5u8x/A%D*G-KaPdSgVkYp3s6v9y$B&E(H+MbQeThWmZq4t7w!z%C*F-J@NcRf
 app.jwtExpirationInMs = 86400000
